<resources>
    <string name="app_name" translatable="false">HealthWatch</string>
    <string name="title_goals">Goals</string>
    <string name="title_alerts">Alerts</string>
    <string name="title_home">Home</string>
    <string name="title_bluetooth">Bluetooth</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="bluetooth_toggle">Activate/Deactive Bluetooth</string>
    <string name="connected_devices">Band</string>
    <string name="search_devices">Search</string>
    <string name="found_devices">Found devices</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="not_registered">Not registered?</string>
    <string name="battery_level">Battery level:</string>
    <string name="welcome">Welcome!</string>
    <string name="who_are_you">But first of all, who are you?</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="log_out">Log out</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google" translatable="false">Google</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="fall_alert">Falls</string>
    <string name="steps">Steps</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="battery">Battery</string>
    <string name="phone_alert">Emergency Number</string>
    <string name="title_diagnose">Diagnose</string>
    <string name="goal_pick_list">Pick a type</string>
    <string name="lose_weight">Lose kilograms</string>
    <string name="walk_kilometers">Walk kilometers</string>
    <string name="walk_steps">Walk steps</string>
    <string name="burn_calories">Burn calories</string>
    <string name="custom">Custom</string>
    <string-array name="goals_elements_list">
        <item>@string/lose_weight</item>
        <item>@string/walk_kilometers</item>
        <item>@string/walk_steps</item>
        <item>@string/burn_calories</item>
        <item>@string/custom</item>
    </string-array>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string-array name="languages_list">
        <item>@string/spanish</item>
        <item>@string/english</item>
    </string-array>
    <string name="theme_string">Theme</string>
    <string name="language_string">Language</string>
    <string name="about_string">About</string>
    <string name="about_information_text">This app has been developed by Pedro Domínguez López, as part of the bachelor thesis in computer engineering at Universidad de Granada. 2021</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="date_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="save">Save</string>
    <string name="general_feeling">General feeling</string>
    <string name="energy_test">Energy Test</string>
    <string name="habit_test">Habit Test</string>
    <string name="goal_test">Goals Test</string>
    <string name="free_test">Free Test</string>
    <string name="steps_alert">Steps alert</string>
    <string name="heart_rate_alert">Heart Rate alert</string>
    <string name="battery_alert">Battery alert</string>
    <string name="battery_alert_message">"Battery has gone under "</string>
    <string name="heart_rate_alert_message">Heart rate has gone above</string>
    <string name="steps_alert_message">"Reached daily steps goal of "</string>
    <string name="mood">Today\'s mood</string>
    <string name="enable_gps">Please, enable GPS in order to search for devices</string>
    <string name="results">Results</string>
    <string name="very_happy">Very happy</string>
    <string name="happy">Happy</string>
    <string name="neutral">Neutral</string>
    <string name="sad">Sad</string>
    <string name="very_sad">Very sad</string>
    <string name="average_heart_rate">Average Heart Rate</string>
    <string name="daily_steps">Daily Steps</string>
    <string name="daily_mood">Daily Mood</string>
    <string name="connected_band">Connected band</string>
    <string name="question_call_emergency">Do you want to call your emergency number?</string>
    <string name="yes">Yes</string>
    <string name="emergency_number_null">Emergency number can\'t be null or zero</string>
    <string name="listening">Listening</string>
    <string name="fall_detected">Fall detected</string>
    <string name="high_heart_rate">High heart rarte</string>
</resources>