<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_goals"
        android:icon="@drawable/ic_goals"
        android:title="@string/title_goals" />

    <item
        android:id="@+id/navigation_alerts"
        android:icon="@drawable/ic_alert_icon"
        android:title="@string/title_alerts" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_diagnose"
        android:icon="@drawable/ic_conversation_svgrepo_com"
        android:title="@string/title_diagnose" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_settings" />

</menu>