<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">


    <fragment
        android:id="@+id/navigation_goals"
        android:name="com.tfg.healthwatch.ui.GoalsFragment"
        android:label="@string/title_goals"
        tools:layout="@layout/fragment_goals" />

    <fragment
        android:id="@+id/navigation_alerts"
        android:name="com.tfg.healthwatch.ui.AlertsFragment"
        android:label="@string/title_alerts"
        tools:layout="@layout/fragment_alerts" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tfg.healthwatch.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_diagnose"
        android:name="com.tfg.healthwatch.ui.DiagnoseFragment"
        android:label="@string/title_diagnose"
        tools:layout="@layout/fragment_diagnose" >
        <action
            android:id="@+id/action_navigation_diagnose_to_navigation_tests"
            app:destination="@id/navigation_tests"
            app:popUpTo="@id/navigation_diagnose" >
            <argument
                android:name="type"
                app:argType="string"
                android:defaultValue="error" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_tests"
        android:name="com.tfg.healthwatch.ui.TestsFragment"
        android:label="Tests"
        tools:layout="@layout/fragment_tests" >
        <action
            android:id="@+id/action_navigation_tests_to_navigation_diagnose"
            app:popUpTo="@id/navigation_tests"
            app:destination="@id/navigation_diagnose" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.tfg.healthwatch.ui.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_bluetooth"
        android:name="com.tfg.healthwatch.ui.bluetooth.BluetoothFragment"
        android:label="@string/title_bluetooth"
        tools:layout="@layout/fragment_bluetooth" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.tfg.healthwatch.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_navigation_settings_to_navigation_profile"
            app:destination="@id/navigation_profile" />
        <action
            android:id="@+id/action_navigation_settings_to_navigation_bluetooth"
            app:destination="@id/navigation_bluetooth" />
    </fragment>
</navigation>